--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 		<div id='gamePanel'>
 			<canvas id='gameCanvas'></canvas>
 		</div>
+		<select id="speed">
+			<option>fast</option>
+			<option>medium</option>
+			<option>slow</option>
+		</select>
+		<input type="button" id="startBtn" value="Start" />
 	</body>
 	<script src="./javascript/main.js">	</script>
 
